Ueber mich Seite

--- a/Index.html
+++ b/Index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fabian Schmitt</title>
+  <title>Home</title>
 <link rel="stylesheet" href="Style.css">
 </head>
 <body>
     <div class="container">
 
   <nav>
-    <a href="Home.html" class="active">Home</a>
+    <a href="Index.html" class="active">Home</a>
     <a href="AboutMe.html">über mich</a>
     <a href="Portfolio.html">Portfolio</a>
     <a href="SkillsStrengths.html">Fähigkeiten & Stärken</a>
