--- a/AboutMe.html
+++ b/AboutMe.html
@@ -27,29 +27,29 @@
             <li>2021 - Start der Sekundarschule</li>
             <li>2024 - Beginn der Lehre bei der Federer Informatik</li>
           </ul>
-          <img src="assets/img/imgFabian.png" alt="Bild von Fabian Schmitt">
+          <img src="assets/img/Fabian.png" alt="Bild von Fabian Schmitt">
         </div>
       </section>
     
       <section class="hobbys">
         <h2>Hobbys</h2>
         <div class="hobby">
-          <img src="assets/img/imgKart.png" alt="Bild eines CRG Kart">
+          <img src="assets/img/Kart.png" alt="Bild eines CRG Kart">
           <p>Ich fahre seit neun Jahren Kart und fahre dieses Jahr auch in der Schweizermeisterschaft mit.</p>
         </div>
         <div class="hobby">
-            <img src="assets/img/imgSim.png" alt="Bild eines Simulators">
+            <img src="assets/img/Sim.png" alt="Bild eines Simulators">
           <p>Wenn ich mal nicht im echten Leben auf der Strecke fahre, bin ich auch gerne virtuell unterwegs.</p>
         </div>
         <div class="hobby">
-            <img src="assets/img/imgSaentispark.png" alt="Bild vom Saentispark (Wasserpark)">
+            <img src="assets/img/Saentispark.png" alt="Bild vom Saentispark (Wasserpark)">
           <p>In der Freizeit unterneme ich gerne lustige Aktivitäten mit meinen Freunden wie in den Säntispark gehen.</p>
         </div>
       </section>
     
       <section class="wohnort">
         <h2>Wohnort</h2>
-        <img src="assets/img/imgStMargrethen.png" alt="Bild von St.Margrethen">
+        <img src="assets/img/StMargrethen.png" alt="Bild von St.Margrethen">
         <p>Seit ich neun Monate alt bin Wohne ich in St.Margrethen. Hier bin ich auch zur Schule gegangen.</p>
       </section>
   </main>
