--- a/AboutMe.html
+++ b/AboutMe.html
@@ -50,7 +50,7 @@
       <section class="wohnort">
         <h2>Wohnort</h2>
         <img src="assets/img/StMargrethen.png" alt="Bild von St.Margrethen">
-        <p>Seit ich neun Monate alt bin Wohne ich in St.Margrethen. Hier bin ich auch zur Schule gegangen.</p>
+        <p>Seit ich neun Monate alt bin, wohne ich in St.Margrethen. Hier bin ich auch zur Schule gegangen.</p>
       </section>
   </main>
 
