--- a/Portfolio.html
+++ b/Portfolio.html
@@ -34,8 +34,8 @@
   <section class="projekt">
     <h2>Simrig</h2>
      <video controls class="video">
-    <source src="assets/video/simrig.mp4" type="video/mp4">
-    Dein Browser unterstützt kein Video.
+    <source src="assets/vid/Simracing.mp4" type="video/mp4">
+    Das Video konnte nicht geladen werden.
   </video>
     <p>Ich habe ein eigenes Simrig (Rennsimulator) zusammengestellt und zusammengebaut.</p>
   </section>
