--- a/AboutMe.html
+++ b/AboutMe.html
@@ -27,14 +27,19 @@
             <li>2021 - Start der Sekundarschule</li>
             <li>2024 - Beginn der Lehre bei der Federer Informatik</li>
           </ul>
+           <source srcset="assets/img/Fabian_klein.png" media="(max-width: 768px)">
           <img src="assets/img/Fabian.png" alt="Bild von Fabian Schmitt">
+        </picture>
         </div>
       </section>
     
       <section class="hobbys">
         <h2>Hobbys</h2>
         <div class="hobby">
+           <picture>
+          <source srcset="assets/img/Kart_klein.png" media="(max-width: 768px)">
           <img src="assets/img/Kart.png" alt="Bild eines CRG Kart">
+        </picture>
           <p>Ich fahre seit neun Jahren Kart und fahre dieses Jahr auch in der Schweizermeisterschaft mit.</p>
         </div>
         <div class="hobby">
