--- a/Portfolio.html
+++ b/Portfolio.html
@@ -21,13 +21,19 @@
 
   <section class="projekt">
     <h2>Projektarbeit</h2>
-    <img src="assets/img/Projektarbeit.png" alt="Logo PC-Business Projekt">
+     <picture>
+        <source srcset="assets/img/Projektarbeit_klein.png" media="(max-width: 768px)">
+        <img src="assets/img/Projektarbeit.png" alt="Logo PC-Business Projekt">
+      </picture>
     <p>Für meine Projektarbeit habe ich mit einem Kollegen Computer gebaut und auf Ricardo verkauft.</p>
   </section>
 
   <section class="projekt">
     <h2>Eigenes Spiel</h2>
-    <img src="assets/img/Spiel.png" alt="Screenshot vom eigenen Spiel">
+    <picture>
+        <source srcset="assets/img/Spiel_klein.png" media="(max-width: 768px)">
+        <img src="assets/img/Spiel.png" alt="Screenshot vom eigenen Spiel">
+      </picture>
     <p>Ich habe mit einem Kollegen ein kleines Handyspiel programmiert. Bei diesem muss man ins Ziel kommen, es gibt jedoch unerwartete Hindernisse.</p>
   </section>
 
