--- a/SkillsStrengths.html
+++ b/SkillsStrengths.html
@@ -22,15 +22,24 @@
       <h2>Stärken</h2>
       <div class="staerken-liste">
         <div class="item">
-          <img src="assets/img/geduld.png" alt="Geduldig Icon" />
+           <picture>
+            <source srcset="assets/img/geduld_klein.png" media="(max-width: 768px)">
+            <img src="assets/img/geduld.png" alt="Geduldig Icon">
+          </picture>
           <p>Ich bin ein geduldiger Mensch.</p>
         </div>
         <div class="item">
-          <img src="assets/img/durchhaltevermoegen.png" alt="Durchhaltevermoegen Icon" />
+           <picture>
+            <source srcset="assets/img/durchhaltevermoegen_klein.png" media="(max-width: 768px)">
+            <img src="assets/img/durchhaltevermoegen.png" alt="Durchhaltevermoegen Icon">
+          </picture>
           <p>Ich habe ein gutes Durchhaltevermoegen.</p>
         </div>
         <div class="item">
-          <img src="assets/img/hilfsbereit.png" alt="Hilfsbereit Icon" />
+          <picture>
+            <source srcset="assets/img/hilfsbereit_klein.png" media="(max-width: 768px)">
+            <img src="assets/img/hilfsbereit.png" alt="Hilfsbereit Icon">
+          </picture>
           <p>Ich bin hilfsbereit.</p>
         </div>
       </div>
@@ -44,9 +53,18 @@
         <li>Selbstreflexion</li>
       </ul>
       <div class="faehigkeiten-icons">
-        <img src="assets/img/empathie.png" alt="Empathie Icon" />
-        <img src="assets/img/teamwork.png" alt="Teamarbeit Icon" />
-        <img src="assets/img/selbstreflexion.png" alt="Selbstreflexion Icon" />
+         <picture>
+          <source srcset="assets/img/empathie_klein.png" media="(max-width: 768px)">
+          <img src="assets/img/empathie.png" alt="Empathie Icon">
+        </picture>
+        <picture>
+          <source srcset="assets/img/teamwork_klein.png" media="(max-width: 768px)">
+          <img src="assets/img/teamwork.png" alt="Teamarbeit Icon">
+        </picture>
+        <picture>
+          <source srcset="assets/img/selbstreflexion_klein.png" media="(max-width: 768px)">
+          <img src="assets/img/selbstreflexion.png" alt="Selbstreflexion Icon">
+        </picture>
       </div>
     </section>
   </main>
