Datei benennung ueberarbeitet

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -10,11 +10,11 @@
     <div class="container">
 
   <nav>
-    <a href="Index.html">Home</a>
-    <a href="AboutMe.html" class="active">über mich</a>
-    <a href="Portfolio.html">Portfolio</a>
-    <a href="SkillsStrengths.html">Fähigkeiten & Stärken</a>
-    <a href="Contact.html">Kontakt</a>
+    <a href="index.html">Home</a>
+    <a href="aboutMe.html" class="active">über mich</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="skillsStrengths.html">Fähigkeiten & Stärken</a>
+    <a href="contact.html">Kontakt</a>
   </nav>
     </div>
   <main class="aboutMe">
@@ -43,18 +43,27 @@
           <p>Ich fahre seit neun Jahren Kart und fahre dieses Jahr auch in der Schweizermeisterschaft mit.</p>
         </div>
         <div class="hobby">
-            <img src="assets/img/Sim.png" alt="Bild eines Simulators">
+            <picture>
+          <source srcset="assets/img/Sim_klein.png" media="(max-width: 768px)">
+          <img src="assets/img/Sim.png" alt="Bild eines Simulators">
+        </picture>
           <p>Wenn ich mal nicht im echten Leben auf der Strecke fahre, bin ich auch gerne virtuell unterwegs.</p>
         </div>
         <div class="hobby">
-            <img src="assets/img/Saentispark.png" alt="Bild vom Saentispark (Wasserpark)">
+            <picture>
+          <source srcset="assets/img/Saentispark_klein.png" media="(max-width: 768px)">
+          <img src="assets/img/Saentispark.png" alt="Bild vom Saentispark (Wasserpark)">
+        </picture>
           <p>In der Freizeit unterneme ich gerne lustige Aktivitäten mit meinen Freunden wie in den Säntispark gehen.</p>
         </div>
       </section>
     
       <section class="wohnort">
         <h2>Wohnort</h2>
+         <picture>
+        <source srcset="assets/img/StMargrethen_klein.png" media="(max-width: 768px)">
         <img src="assets/img/StMargrethen.png" alt="Bild von St.Margrethen">
+      </picture>
         <p>Seit ich neun Monate alt bin, wohne ich in St.Margrethen. Hier bin ich auch zur Schule gegangen.</p>
       </section>
   </main>
