--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,15 +10,14 @@
     <div class="container">
 
   <nav>
-    <a href="Index.html">Home</a>
-    <a href="AboutMe.html">über mich</a>
-    <a href="Portfolio.html" class="active">Portfolio</a>
-    <a href="SkillsStrengths.html">Fähigkeiten & Stärken</a>
-    <a href="Contact.html">Kontakt</a>
+    <a href="index.html">Home</a>
+    <a href="aboutMe.html">über mich</a>
+    <a href="portfolio.html" class="active">Portfolio</a>
+    <a href="skillsStrengths.html">Fähigkeiten & Stärken</a>
+    <a href="contact.html">Kontakt</a>
   </nav>
     </div>
 <main class="portfolio">
-
   <section class="projekt">
     <h2>Projektarbeit</h2>
      <picture>
@@ -45,7 +44,6 @@
   </video>
     <p>Ich habe ein eigenes Simrig (Rennsimulator) zusammengestellt und zusammengebaut.</p>
   </section>
-
 </main>
 
   <footer>
