--- a/SkillsStrengths.html
+++ b/SkillsStrengths.html
@@ -10,11 +10,11 @@
     <div class="container">
 
   <nav>
-    <a href="Index.html">Home</a>
-    <a href="AboutMe.html">über mich</a>
-    <a href="Portfolio.html">Portfolio</a>
-    <a href="SkillsStrengths.html" class="active">Fähigkeiten & Stärken</a>
-    <a href="Contact.html">Kontakt</a>
+    <a href="index.html">Home</a>
+    <a href="aboutMe.html">über mich</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="skillsStrengths.html" class="active">Fähigkeiten & Stärken</a>
+    <a href="contact.html">Kontakt</a>
   </nav>
     </div>
      <main class="skillsstrengths">
@@ -72,6 +72,5 @@
   <footer>
     Fabian Schmitt ©2025
   </footer>
-
 </body>
 </html>
