--- a/Contact.html
+++ b/Contact.html
@@ -10,11 +10,11 @@
     <div class="container">
 
   <nav>
-    <a href="Index.html">Home</a>
-    <a href="AboutMe.html">über mich</a>
-    <a href="Portfolio.html">Portfolio</a>
-    <a href="SkillsStrengths.html">Fähigkeiten & Stärken</a>
-    <a href="Contact.html" class="active">Kontakt</a>
+    <a href="index.html">Home</a>
+    <a href="aboutMe.html">über mich</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="skillsStrengths.html">Fähigkeiten & Stärken</a>
+    <a href="contact.html" class="active">Kontakt</a>
   </nav>
     </div>
    <main class="kontakt">
