--- a/Index.html
+++ b/Index.html
@@ -8,13 +8,12 @@
 </head>
 <body>
     <div class="container">
-
   <nav>
-    <a href="Index.html" class="active">Home</a>
-    <a href="AboutMe.html">über mich</a>
-    <a href="Portfolio.html">Portfolio</a>
-    <a href="SkillsStrengths.html">Fähigkeiten & Stärken</a>
-    <a href="Contact.html">Kontakt</a>
+    <a href="index.html" class="active">Home</a>
+    <a href="aboutMe.html">über mich</a>
+    <a href="portfolio.html">Portfolio</a>
+    <a href="skillsStrengths.html">Fähigkeiten & Stärken</a>
+    <a href="contact.html">Kontakt</a>
   </nav>
     </div>
   <main class="home">
