--- a/Contact.html
+++ b/Contact.html
@@ -29,7 +29,7 @@
       <label for="nachricht">Nachricht:</label>
       <textarea id="nachricht" name="nachricht" rows="5" placeholder="Deine Nachricht"></textarea>
 
-      <button type="button" onclick="window.location.href='mailto:deinname@beispiel.ch?subject=Kontaktanfrage&body=Hallo,'">Absenden</button>
+      <button>Absenden</button>
     </form>
 
     <div class="kontakt-info">
